--- a/test/ucumDemo.css
+++ b/test/ucumDemo.css
@@ -101,7 +101,9 @@ h2 {
 }
 
 h4 {
+  font-weight: 500;
   text-align: center;
+  color: black;
 }
 
 .section {
@@ -110,7 +112,9 @@ h4 {
   margin: 25px;
   padding: 15px 25px;
   width: auto;
-
+}
+.small-print {
+  font-size: 14px;
 }
 
 
