input sanitization changes

--- a/demo-dist/stylesheets/ucumDemo.css
+++ b/demo-dist/stylesheets/ucumDemo.css
@@ -127,6 +127,10 @@ button {
   margin-top: 0px;
 }
 
+#resultString{
+  margin-top: 10px;
+}
+
 #inputfile {
   font-size: 14px ;
   color: #1E4193 ;
