updates to license, readme, added thirdparty license list, added new intro page

--- a/demo-dist/stylesheets/ucumDemo.css
+++ b/demo-dist/stylesheets/ucumDemo.css
@@ -89,9 +89,12 @@
 
 body {
   font-family: "sans-serif" ;
-  font-size: 16px;
   margin: 0px 20px 20px 20px ;
   color: #1E4193 ;
+}
+
+#demobody {
+  font-size: 16px;
 }
 
 h2 {
