rest of changes to add Constants category and add advanced settings section to Validation tab

--- a/demo-dist/stylesheets/ucumDemo.css
+++ b/demo-dist/stylesheets/ucumDemo.css
@@ -184,7 +184,7 @@ ul.tab li a {
   border-top: none;
 }
 
-#advancedSearch {
+#advancedSearchCnv, #advancedSearchVal {
   border: 3px dotted #ddd;
   border-radius: 25px;
   padding: 20px;
