--- a/demo-dist/stylesheets/ucumDemo.css
+++ b/demo-dist/stylesheets/ucumDemo.css
@@ -159,6 +159,10 @@ a {
   font-weight: 500;
 }
 
+.invalid {
+  border: 3px solid red;
+}
+
 /* Override the standard autocompleter settings for an input
    field when a value is typed in that doesn't match what's on
    the list presented
