--- a/demo-dist/stylesheets/ucumDemo.css
+++ b/demo-dist/stylesheets/ucumDemo.css
@@ -97,8 +97,21 @@ body {
   font-size: 16px;
 }
 
-h2 {
+h1 {
   font-size: 24px ;
+  font-weight: 500;
+  color: #1E4193;
+  text-align: center;
+}
+
+#overview-title {
+  font-size: 32px !important;
+  text-align: left !important ;
+  margin-bottom: 20px !important;
+}
+
+h2 {
+  font-size: 22px ;
   font-weight: 500 ;
   text-align: center ;
   color: black ;
@@ -181,7 +194,7 @@ input.no_match {
 
 ul.tab li a {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 /* Style the tab content */
