--- a/demo-dist/stylesheets/ucumDemo.css
+++ b/demo-dist/stylesheets/ucumDemo.css
@@ -213,15 +213,15 @@ ul.tab li a {
 }
 #convertToDivs {
   width: 100% ;
+  display: flex;
+  justify-content: flex-start;
 }
 #convertLeft {
-  float: left ;
-  width: 70%;
+  margin-right: 15px;
 }
 
 #convertRight {
-  float: right;
-  width: 30%
+  width: 280px;
 }
 
 #convertNum {
