--- a/demo-dist/stylesheets/ucumDemo.css
+++ b/demo-dist/stylesheets/ucumDemo.css
@@ -147,6 +147,10 @@ button {
   margin-top: 10px;
 }
 
+#hints {
+  max-width: 800px;
+  margin: 10px;
+}
 #inputfile {
   font-size: 14px ;
   color: #1E4193 ;
