initial commit to fix conversion of invalid unit, add meta data, and fix processing flow on starting converter tab

--- a/demo-dist/stylesheets/ucumDemo.css
+++ b/demo-dist/stylesheets/ucumDemo.css
@@ -285,7 +285,8 @@ input.invalid {
   border: 3px solid red;
 }
 
-#resultString.invalid, #validationString.invalid {
+#resultString.invalid, #validationString.invalid,
+#convertFromName.invalid, #convertToName.invalid {
   color: red ;
 }
 
