Example cell value in CSV added.

--- a/demo-dist/stylesheets/ucumDemo.css
+++ b/demo-dist/stylesheets/ucumDemo.css
@@ -363,3 +363,8 @@ button[disabled] {
 tr[data-fieldval] {
   vertical-align: top;
 }
+
+/* Code examples should be the same color as plain text, because the red color from bootstrap highlights it very much */
+.tab-content code {
+  color: inherit;
+}
