--- a/demo/stylesheets/ucumDemo.css
+++ b/demo/stylesheets/ucumDemo.css
@@ -1,5 +1,20 @@
 /* Styles for the header */
 
+/* NIH/NLM/LHC logo (banner) */
+#lhc-logo {
+  background-color: #0bacb6;
+  padding-top: 4px;
+  padding-left: 5px;
+  padding-bottom: 3px;
+  overflow: hidden;
+}
+#lhc-logo img {
+  height: 35px;
+  width: auto;
+  margin-bottom: -1px;
+  vertical-align: middle;
+}
+
 #header {
   margin-bottom: 20px;
   position: relative;
@@ -9,17 +24,17 @@
   border-top: 2px solid #0BACB6;
   border-bottom: 7px solid #17b4e3;
   line-height: normal;
-  padding-bottom: 22px;
+  padding-bottom: 10px;
 }
 #fine-print, #header {
   border-top: 2px solid #0bacb6;
 }
 #logo {
   position: relative;
-  top: 5px;
+  top: 4px;
   font-size: 18px;
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
 }
 #header a {
   color: #1E4193;
@@ -27,34 +42,17 @@
 }
 #logo img {
   float: left;
-  margin-right: 10px;
-  margin-left: 20px;
+  margin-right: 5px;
+  margin-left: 5px;
   border-right: 1px solid #0BACB6;
-  padding-right: 0.75em;
+  padding-right: 5px;
 }
 #logo, #log img {
   display: block;
 }
-#logo .site-name-slogan {
-  font-size: 14px;
-  position: relative;
-  top: 10px;
-  left: -2px;
-}
-#logo .site-name-slogan span {
-  display: block;
-  font-size: 24px;
-  position: relative;
-  left: -2px;
-}
-#logo .site-name-slogan .slogan {
-  color: #202020;
-  font-size: 12px;
-  position: relative;
-  left: 1px;
-}
+
 #siteNameBox {
-  margin-top: 1em;
+  margin-top: 2.2em;
 }
 #siteName {
   font-size: 300%;
