--- a/demo/stylesheets/ucumDemo.css
+++ b/demo/stylesheets/ucumDemo.css
@@ -219,6 +219,10 @@ button {
   visibility: hidden;
 }
 
+#molecular-weight label, #charge-div label {
+  font-weight: normal;
+}
+
 #moleWeight, #charge {
   width: 80px;
 }
