--- a/demo/stylesheets/ucumDemo.css
+++ b/demo/stylesheets/ucumDemo.css
@@ -67,6 +67,8 @@ h1 {
   font-weight: 500;
   color: #1E4193;
   text-align: center;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 #overview-title {
@@ -80,6 +82,8 @@ h2 {
   font-weight: 500 ;
   text-align: center ;
   color: black ;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 /* h3 margin-bottom setting gets overriden by bootstrap's
@@ -88,6 +92,7 @@ h2 {
 h3 {
   font-size: 20px ;
   font-weight: bold ;
+  margin-top: 20px;
   margin-bottom:  20px !important;
 }
 
